[gd_scene load_steps=19 format=3 uid="uid://dcscjng8hcgxo"]

[ext_resource type="Theme" uid="uid://whfu147gfrua" path="res://ui/interaction_choice_buttons.tres" id="1_3m5up"]
[ext_resource type="Script" path="res://ui/scripts/interaction_choices.gd" id="1_en0qx"]
[ext_resource type="Texture2D" uid="uid://dcmm55st4xxvs" path="res://ui/icons/eye.png" id="2_1chxs"]
[ext_resource type="Texture2D" uid="uid://ocaragipxa6v" path="res://ui/icons/dot.png" id="2_1qdkx"]
[ext_resource type="Texture2D" uid="uid://cge2l2bk8d633" path="res://ui/icons/magnifier.png" id="3_c3yq6"]
[ext_resource type="Texture2D" uid="uid://bpefibiuqgb77" path="res://ui/icons/pick_up.png" id="4_uucll"]
[ext_resource type="Texture2D" uid="uid://ddqnxxmtjidr8" path="res://ui/icons/use_cog.png" id="5_7xea1"]
[ext_resource type="Script" path="res://ui/scripts/inspect_action.gd" id="5_jsbq6"]
[ext_resource type="Script" path="res://dialogue/dialogue.gd" id="9_ilhgn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6vxno"]
radius = 13.8099

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w51lq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0h70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acfpl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wdolx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e3h02"]

[sub_resource type="Animation" id="Animation_0go2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OpenWheelBtn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5bhaj"]
resource_name = "open_wheel"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OpenWheelBtn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qiqfe"]
_data = {
"RESET": SubResource("Animation_0go2k"),
"open_wheel": SubResource("Animation_5bhaj")
}

[node name="InteractionChoices" type="Control" groups=["interaction_menu"]]
layout_mode = 3
anchor_left = 0.028
anchor_right = 0.306
anchor_bottom = 0.42
offset_left = -0.256001
offset_right = -0.512024
offset_bottom = 7.84
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_3m5up")
script = ExtResource("1_en0qx")
enable_on_scene = null

[node name="AreaDetect" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 0)
collision_layer = 4
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetect"]
position = Vector2(152, 128)
scale = Vector2(11.0066, 10.2697)
shape = SubResource("CircleShape2D_6vxno")

[node name="UseBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 232.0
offset_top = 88.0
offset_right = 304.0
offset_bottom = 160.0
pivot_offset = Vector2(36, 36)
mouse_default_cursor_shape = 2
icon = ExtResource("5_7xea1")
icon_alignment = 1

[node name="InspectBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 128.0
offset_top = -8.0
offset_right = 200.0
offset_bottom = 64.0
pivot_offset = Vector2(36, 36)
mouse_default_cursor_shape = 2
icon = ExtResource("2_1chxs")
icon_alignment = 1
script = ExtResource("5_jsbq6")

[node name="ZoomBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 128.0
offset_top = 192.0
offset_right = 200.0
offset_bottom = 264.0
pivot_offset = Vector2(36, 36)
mouse_default_cursor_shape = 2
icon = ExtResource("3_c3yq6")
icon_alignment = 1

[node name="PickUpBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 16.0
offset_top = 96.0
offset_right = 88.0
offset_bottom = 168.0
pivot_offset = Vector2(36, 36)
mouse_default_cursor_shape = 2
icon = ExtResource("4_uucll")
icon_alignment = 1

[node name="OpenWheelBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 120.0
offset_top = 88.0
offset_right = 200.0
offset_bottom = 160.0
pivot_offset = Vector2(40, 40)
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_w51lq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_n0h70")
theme_override_styles/hover = SubResource("StyleBoxEmpty_acfpl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wdolx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_e3h02")
icon = ExtResource("2_1qdkx")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Animations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_qiqfe")
}

[node name="DialogueController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_ilhgn")
